# nc-token

./: .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  Anchor.toml  CHAINLINK_MIGRATION_SUMMARY.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  Draft.md  FIX_PRESALE_STEPS.md  MIGRATION_GUIDE.md  MIGRATION_STEPS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README-PROGRAM-ID.md  README.md  SETUP.md  SETUP_COMMANDS.md  SETUP_COMMANDS.sh  TREASURY_HYBRID_SETUP.md  deploy.txt  deploylogs.md  deployment-info.json  frontend.env.example  governance-deployment-info.json  metadata.json  package-lock.json  package.json  presale-deployment-info.json  revoke-authorities.sh  tsconfig.json
deployments/: deployment-info.json  governance-deployment-info.json  presale-deployment-info.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_SCRIPTS.md  FIX_PRESALE_STEPS.md  Functions.md  OPERATIONS.md  PERMISSIONS.md  QUICKSTART.md  README-PROGRAM-ID.md  REFERENCE.md  SETUP.md  SOLANA_TOKEN_SUPPLY_LIMITS.txt  TREASURY_MULTISIG_IMPLEMENTATION.md
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/presale/: Cargo.toml
programs/presale/src/: lib.rs
reports/: NC-Token report.ods
scripts/: allow-payment-token.ts  buy-presale.ts  check-presale-state.ts  create-vault-recover-keypair.ts  deploy-all.ts  deploy-governance.ts  deploy-presale.ts  deploy.ts  fix-presale-vault.ts  fund-presale-vault.ts  init-governance.ts  migrate-presale-pricing.ts  recover-closed-vault.ts  recover-tokens.ts  revoke-authorities.ts  set-presale-program.ts  set-token-program.ts  (+5 more)
(+50 files in other folders)
