[package]
name = "governance"
version = "0.1.0"
description = "Multisig Governance Program for SPL Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
spl-project = { path = "../spl-project", features = ["cpi"] }
