[package]
name = "presale"
version = "0.1.0"
description = "Presale contract for token sales"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "presale"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
spl-project = { path = "../spl-project", features = ["cpi"] }
chainlink_solana = "2.0.8"


[patch.crates-io]
zeroize = "1.8.1"
